test_scores/negative_dimers/features/Q86VQ0.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q86VQ0.pkl.xz